# tg-blackrussia-s43-adminpanel

./: .gitignore  config.py  db.py  main.py  pyproject.toml  web_panel.py
Bot/: __init__.py  dispatcher.py  filters.py  handlers.py  keyboard.py  sheets.py  states.py  types.py  utils.py
Bot/middlewares/: __init__.py  middlewares.py
static/: app.css  app.js
templates/: administration_forms.html  administration_inactives.html  administration_norm_check_detail.html  administration_norm_check_public.html  administration_norm_checks.html  administration_punishments.html  administration_reports.html  administration_users.html  base.html  dashboard.html  forms.html  inactives.html  login.html  management.html  profile.html  punishments.html  reports.html  search.html  server.html  setup.html
