[project]
name = "tg-blackrussia-s43-adminpanel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.25.0",
    "aiogram-media-group>=0.5.1",
    "fastapi>=0.116.0",
    "gspread>=6.2.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "peewee>=4.0.0",
    "python-multipart>=0.0.20",
    "tzdata>=2026.2",
    "uvicorn>=0.35.0",
    "validators>=0.35.0",
]
